# ToolKitNetworking

./: .gitignore  .gitmodules  AGENTS.md  ArchitectureOverview.drawio  ArchitectureOverview.mmd  EDITOR_NETWORK_PLAY_PLAN.md  PROJECT_OVERVIEW.md  README.md  ReplicationFlow.mmd  WSL_HANDOFF.md
Codes/: CMakeHotReload.cmake  CMakeLists.txt  CMakeSafeCopyIfDifferent.cmake  EditorNetworkPlayPlanner.cpp  EditorNetworkPlayPlanner.h  GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  HandshakeSecurity.cpp  HandshakeSecurity.h  INetworkSessionRuntime.h  ITransportHost.h  ITransportPeer.h  NetworkBase.cpp  NetworkBase.h  NetworkComponent.cpp  NetworkComponent.h  NetworkEntity.cpp  NetworkEntity.h  NetworkMacros.h  NetworkManager.cpp  NetworkManager.h  NetworkPackets.cpp  NetworkPackets.h  NetworkRPCRegistry.h  NetworkRole.h  NetworkSessionCore.cpp  NetworkSessionCore.h  NetworkSessionManager.cpp  NetworkSessionManager.h  NetworkSessionTypes.h  NetworkSpawnService.cpp  NetworkSpawnService.h  NetworkState.cpp  NetworkState.h  NetworkVariable.h  PluginMain.cpp  PluginMain.h  ReplicationManager.cpp  (+12 more)
Config/: Plugin.settings
Scripts/: run_windows_ctest.cmd  run_windows_engine_build.cmd  run_windows_integration_build.cmd  run_windows_plugin_build.cmd  run_windows_project_build.cmd  run_windows_unit_build.cmd
Tests/: CMakeLists.txt
Tests/Integration/: EditorNetworkPlayPlannerTests.cpp  EditorNetworkPlayPluginTests.cpp  NetworkPlayBootManifestTests.cpp  NetworkPlayBootRuntimeTests.cpp  NetworkPlayChildProcessSmokeTests.cpp  NetworkSessionManagerIntegrationTests.cpp  ReplicationManagerSecurityTests.cpp
Tests/Support/: FakeSessionRuntime.h  FakeTransport.h  ManualClock.h
Tests/Unit/: HandshakeSecurityTests.cpp  NetworkSessionTypesTests.cpp
docs/: BUILD.md  CONTRIBUTING.md  WSL_HANDOFF.md
docs/plans/: NETWORK_SECURITY_AND_ENDPOINT_ROADMAP.md  PRODUCTION_NETWORKING_PLAN.md  TESTING_FRAMEWORK_PLAN.md
